Despliegue de Aplicaciones Kubernetes/kubernetes-curso/pod-helloworld.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-kubernetes
  labels:
    app: helloworld
spec:
 containers:
 - name: k8s-demo
   image: wardviaene/k8s-demo
   ports:
   - containerPort: 3000
