Despliegue de Aplicaciones Kubernetes/kubernetes-curso/webtest-volum-emptydir.yml
apiVersion: v1
kind: Pod
metadata:
  name: webtest
  labels:
    app: webtest
spec:
  containers:
  - name: contenedor1
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - name: test
      mountPath: /web1
  - name: contenedor2
    image: wardviaene/k8s-demo
    ports:
    - containerPort: 3000
    volumeMounts:
    - name: test
      mountPath: /web2
  volumes:
    - name: test
      emptyDir: {}
